+ [Herve Drolon] added new Exif maker note tags
+ [Herve Drolon] added FreeImage_JPEGCrop
+ [Thorsten Radde] added support for 8-bit palettized bitmaps in FreeImage_RotateClassic
+ [Matt Rice] added automatic call to FreeImage_Initialise / FreeImage_DeInitialise when using FreeImage as a .so
+ [Martin Dyring-Andersen] added FreeImage_LoadMultiBitmapFromMemory to the multi-page API
* [Carsten Klein] fixed a bug in FreeImage_SetMetadata occuring when deleting a tag
* [Herve Drolon] fixed a bug in PNG plugin when reading Macromedia 'false' PNG files
* [Thorsten Radde] added resolution support to PluginPSD
* [Ryan Rubley] fixed a bug in PluginGIF occuring with interlaced GIF
* [Ryan Rubley] fixed a bug in the multipage cache mechanism (internal FreeImage_FindBlock function)
* [Thorsten Radde] fixed a stack corruption in TIFF plugin occuring when reading exif tags
* [checkered] fixed a bug in the multipage cache mechanism causing VS2005 to crash on multipage files
* [Herve Drolon] fixed a bug with transparency support of 1- and 4-bit images
* [Roar Flolo] fixed a bug in PSD plugin when reading non compressed RGB images (alpha channel initialization)
* [Nicolas Hatier] fixed a bug in PluginGIF when using the GIF_PLAYBACK flag
* [Herve Drolon] fixed a bug in TIFF plugin when saving 8-bit images using LZW with differenciation

July 16th, 2006 - 3.9.1
* [Ryan Rubley] fixed a bug in PluginGIF plugin causing FreeImage to crash on malformed GIF files

July 6th, 2006 - 3.9.0
! FreeImage now uses libPNG 1.2.12
! FreeImage now uses libTIFF 3.8.2 (with patch 2006-06-24)
! FreeImage_Allocate/FreeImage_Allocate now set the resolution to 72 dpi instead of 0
+ [Herve Drolon/Petr Pytelka] added a raw FAX G3 format loader
+ [Herve Drolon] added support for most image types to FreeImage_Rescale
+ [Herve Drolon] added FreeImage_MakeThumbnail
+ [Herve Drolon] added support for 64-bit images to FreeImage_ConvertTo32Bits
+ [Herve Drolon] added support for Exif tags to TIF plugin (read only)